# SO

./: CMakeLists.txt  README.md  SO3minix.patch  compile.sh  diakrytynizator.asm  example.c  linux64.inc  notec.asm  test.asm  unit_test.c  wiel.asm
